Table Head vertial alignment fix

--- a/src/components/ServerSideTable.css
+++ b/src/components/ServerSideTable.css
@@ -11,3 +11,7 @@ table {
     background: #fff;
     box-shadow: 0 2px 0 #e5e5e5;
 }
+
+.table-header th {
+    vertical-align: text-top;
+}
